         crypto.c,csw.c,dck.c,ide.c,internals.h,libspectrum.c,libspectrum.h.in,
         make-perl.c,memory.c,microdrive.c,plusd.c,pzx_read.c,rzx.c,szx.c,
         tape.c,tape_block.c,test/Makefile.am,timings.c,tzx_read.c,
         warajevo_read.c,wav.c,z80.c,z80em.c,zlib.c,zxs.c: have a go at updating
         copyright dates since v 1.1.1 (Fred).
20160430 README,doc/libspectrum.3: list more disk formats (Sergio).
20160501 Makefile.am,memory.c: don't use g_mem_set_vtable on newer GLib and
         distribute missing macro files (Sergio).
20160501 doc/libspectrum.3: bump more version numbers for 1.2.0 release
         (Sergio).
20160503 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Currah uSource snapshots
         (patch #363) (Fred and Sergio).
20160508 szx.c: use Opus flags when writing chunk (Sergio).
20160511 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for DISCiPLE snapshots (patch
         #365) (Fred).
20160514 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Didaktik 80 MDOS 1 snapshots
         (patch #364) (Fred).
20160521 szx.c: reset uncompressed size when loading Opus and +D custom ROM
         (from patch #366) (Sergio).
20160529 README,doc/libspectrum.3: update release dates (Fred).
20160529 configure.ac: mark this release as 1.2.0-pre1 (Fred).
20160530 doc/libspectrum.txt: list more disk formats (Sergio).
20160606 ChangeLog,README,configure.ac,doc/libspectrum.3: update release dates
         and mark this release as 1.2.0 (Fred).
20160622 make-perl.c,myglib/garray.c: add implementations of
         g_array_sized_new() and g_array_remove_index_fast(). (Thanks, Sergio)
         (Phil).
20160709 ChangeLog,README,configure.ac,doc/{libspectrum.3,libspectrum.txt}: 
         bump some version numbers for 1.2.1 release (Fred).