@@ -63,7 +63,16 @@ libspectrum_la_SOURCES = bzip2.c \
 			 zlib.c \
 			 zxs.c
 
-libspectrum_la_LDFLAGS = -version-info 10:0:2 -no-undefined @WINDRES_LDFLAGS@
+## The version info is made of three components: current, revision and age
+## We update the version when we release according to the guide at
+## https://autotools.io/libtool/version.html
+## The rules of thumb, when dealing with these values are:
+## * Always increase the revision value.
+## * Increase the current value whenever an interface has been added, removed or
+##   changed.
+## * Increase the age value only if the changes made to the ABI are backward
+##   compatible.
+libspectrum_la_LDFLAGS = -version-info 11:1:3 -no-undefined @WINDRES_LDFLAGS@
 
 libspectrum_la_LIBADD = @AUDIOFILE_LIBS@ @GLIB_LIBS@ -lm
 
