@@ -67,6 +67,6 @@ Wii. At the time of writing, those haven't been ported yet.
 Then, type "make" and if everything went well, "make install".
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-6th June, 2016
+17th July, 2016
 
 $Id$
