@@ -22,7 +22,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH libspectrum 3 "6th June, 2016" "Version 1.2.1" "Emulators"
+.TH libspectrum 3 "17th July, 2016" "Version 1.2.1" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
