@@ -1,4 +1,4 @@
-2016-07-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2016-07-17  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * libspectrum 1.2.1 released.
 
